--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  build_runner: ^2.0.1
+  connectivity: ^3.0.3
   cupertino_icons: ^1.0.2
+  dio: ^4.0.0
+  flutter_mobx: ^2.0.0
+  freezed: ^0.14.1+3
+  freezed_annotation: ^0.14.1
+  get_it: ^6.1.1
+  hive: ^2.0.4
+  hive_flutter: ^1.0.0
+  hive_generator: ^1.1.0
+  mobx: ^2.0.1
+  mobx_codegen: ^2.0.1+3
+  path_provider: ^2.0.1
 
 dev_dependencies:
   flutter_test:
@@ -35,7 +44,6 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -43,18 +51,14 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
