--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
 assets:
-    - lib/assets/json/
+    - assets/json/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
