--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   mobx: ^2.0.1
   mobx_codegen: ^2.0.1+3
   path_provider: ^2.0.1
-
+  easy_localization: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -54,6 +54,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
 assets:
     - assets/json/
+    - assets/language/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
