--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:tools="http://schemas.android.com/tools"
     package="com.example.coin_dino">
    <application
+        tools:replace="android:label"
         android:label="coin_dino"
         android:icon="@mipmap/ic_launcher">
         <activity
