--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,11 @@
 buildscript {
-    ext.kotlin_version = '1.3.50'
+      ext.kotlin_version = '1.3.72'               // or latest
+  ext {
+       compileSdkVersion   = 30                // or latest
+       targetSdkVersion    = 30                // or latest
+       appCompatVersion    = "1.1.0"           // or latest
+   }
+
     repositories {
         google()
         jcenter()
@@ -15,6 +21,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+          maven {
+           // [required] background_fetch
+           url "${project(':background_fetch').projectDir}/libs"
+       }
     }
 }
 
