--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,11 +53,10 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
-  uses-material-design: true
+
   # To add assets to your application, add an assets section, like this:
-assets:
-  - assets/json/
-  - assets/language/
+  assets:
+    - assets/
 
 #   - images/a_dot_ham.jpeg
 # An image asset can refer to one or more resolution-specific "variants", see
