--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   mobx: ^2.0.1
   mobx_codegen: ^2.0.1+3
   path_provider: ^2.0.1
+  provider: ^5.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -53,10 +54,9 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
-
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/json/
+    - assets/json/
 
 #   - images/a_dot_ham.jpeg
 # An image asset can refer to one or more resolution-specific "variants", see
