--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   path_provider: ^2.0.1
   provider: ^5.0.0
   pull_to_refresh: ^2.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -56,8 +57,11 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   # To add assets to your application, add an assets section, like this:
+  uses-material-design: true
   assets:
-    - assets/json/
+      - assets/
+      - assets/images/
+      - assets/fonts/
 
 #   - images/a_dot_ham.jpeg
 # An image asset can refer to one or more resolution-specific "variants", see
@@ -69,15 +73,12 @@ flutter:
 # "family" key with the font family name, and a "fonts" key with a
 # list giving the asset and other descriptors for the font. For
 # example:
-# fonts:
-#   - family: Schyler
-#     fonts:
-#       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+      - family: RockoFLF
+        fonts:
+         - asset: assets/fonts/RockoFLF-Bold.ttf
 #       - asset: fonts/Schyler-Italic.ttf
 #         style: italic
-#   - family: Trajan Pro
-#     fonts:
-#       - asset: fonts/TrajanPro.ttf
 #       - asset: fonts/TrajanPro_Bold.ttf
 #         weight: 700
 #
