--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   path_provider: ^2.0.1
   provider: ^5.0.0
   pull_to_refresh: ^2.0.0
-
+  auto_size_text: ^3.0.0-nullsafety.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
