--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   provider: ^5.0.0
   pull_to_refresh: ^2.0.0
   auto_size_text: ^3.0.0-nullsafety.0
+  cached_network_image: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
