--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  auto_size_text: ^3.0.0-nullsafety.0
   background_fetch: ^1.0.0-nullsafety.2
   build_runner: ^2.0.1
+  cached_network_image: ^3.0.0
   connectivity: ^3.0.3
   cupertino_icons: ^1.0.2
   device_preview: ^0.7.1
   dio: ^4.0.0
   easy_localization: ^3.0.0
+  flutter_email_sender: ^5.0.0
   flutter_local_notifications: ^5.0.0+4
   flutter_mobx: ^2.0.0
   freezed: ^0.14.1+3
@@ -38,16 +41,14 @@ dependencies:
   hive: ^2.0.4
   hive_flutter: ^1.0.0
   hive_generator: ^1.1.0
+  in_app_review: ^2.0.2
   mobx: ^2.0.1
   mobx_codegen: ^2.0.1+3
   path_provider: ^2.0.1
   provider: ^5.0.0
   pull_to_refresh: ^2.0.0
-  auto_size_text: ^3.0.0-nullsafety.0
-  cached_network_image: ^3.0.0
-  share: ^2.0.4
-  flutter_email_sender: ^5.0.0
-  in_app_review: ^2.0.2
+  share_plus: ^2.1.2
+  url_launcher: ^6.0.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -63,24 +64,25 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   uses-material-design: true
   assets:
-      - assets/
-      - assets/images/
-      - assets/fonts/
+    - assets/
+    - assets/images/
+    - assets/fonts/
 
-#   - images/a_dot_ham.jpeg
-# An image asset can refer to one or more resolution-specific "variants", see
-# https://flutter.dev/assets-and-images/#resolution-aware.
-# For details regarding adding assets from package dependencies, see
-# https://flutter.dev/assets-and-images/#from-packages
-# To add custom fonts to your application, add a fonts section here,
-# in this "flutter" section. Each entry in this list should have a
-# "family" key with the font family name, and a "fonts" key with a
-# list giving the asset and other descriptors for the font. For
-# example:
+  #   - images/a_dot_ham.jpeg
+  # An image asset can refer to one or more resolution-specific "variants", see
+  # https://flutter.dev/assets-and-images/#resolution-aware.
+  # For details regarding adding assets from package dependencies, see
+  # https://flutter.dev/assets-and-images/#from-packages
+  # To add custom fonts to your application, add a fonts section here,
+  # in this "flutter" section. Each entry in this list should have a
+  # "family" key with the font family name, and a "fonts" key with a
+  # list giving the asset and other descriptors for the font. For
+  # example:
   fonts:
-      - family: RockoFLF
-        fonts:
-         - asset: assets/fonts/RockoFLF-Bold.ttf
+    - family: RockoFLF
+      fonts:
+        - asset: assets/fonts/RockoFLF-Bold.ttf
+
 #       - asset: fonts/Schyler-Italic.ttf
 #         style: italic
 #       - asset: fonts/TrajanPro_Bold.ttf
