--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   pull_to_refresh: ^2.0.0
   share_plus: ^2.1.2
   url_launcher: ^6.0.4
+  in_app_purchase: ^1.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
