update: search_screen, main | fix: asset json problem in pubspec

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
     - assets/
     - assets/images/
     - assets/fonts/
+    - assets/json/
 
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
