--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   device_preview: ^0.7.1
   dio: ^4.0.0
   easy_localization: ^3.0.0
+  fl_chart: ^0.36.1
   flutter_email_sender: ^5.0.0
   flutter_local_notifications: ^5.0.0+4
   flutter_mobx: ^2.0.0
@@ -41,6 +42,7 @@ dependencies:
   hive: ^2.0.4
   hive_flutter: ^1.0.0
   hive_generator: ^1.1.0
+  html: ^0.15.0
   in_app_purchase: ^1.0.1
   in_app_review: ^2.0.2
   mobx: ^2.0.1
@@ -51,8 +53,7 @@ dependencies:
   rxdart: ^0.27.1
   share_plus: ^2.1.2
   url_launcher: ^6.0.4
-  fl_chart: ^0.36.1
-  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
