--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   html: ^0.15.0
   in_app_purchase: ^1.0.1
   in_app_review: ^2.0.2
+  intl: ^0.17.0
   mobx: ^2.0.1
   mobx_codegen: ^2.0.1+3
   path_provider: ^2.0.1
