--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,6 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
   auto_size_text: ^3.0.0-nullsafety.0
   background_fetch: ^1.0.0-nullsafety.2
   build_runner: ^2.0.1
@@ -33,12 +31,15 @@ dependencies:
   dio: ^4.0.0
   easy_localization: ^3.0.0
   fl_chart: ^0.36.1
+  flutter:
+    sdk: flutter
   flutter_email_sender: ^5.0.0
   flutter_local_notifications: ^5.0.0+4
   flutter_mobx: ^2.0.0
   freezed: ^0.14.1+3
   freezed_annotation: ^0.14.1
   get_it: ^7.1.3
+  google_mobile_ads: ^0.13.3
   hive: ^2.0.4
   hive_flutter: ^1.0.0
   hive_generator: ^1.1.0
