--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   background_fetch: ^1.0.0-nullsafety.2
   build_runner: ^2.0.1
   cached_network_image: ^3.0.0
+  change_app_package_name: ^1.0.0
   connectivity: ^3.0.3
   cupertino_icons: ^1.0.2
   device_preview: ^0.7.4
