--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   mobx: ^2.0.1
   mobx_codegen: ^2.0.1+3
   path_provider: ^2.0.1
+  permission_handler: ^8.1.4+2
   provider: ^5.0.0
   pull_to_refresh: ^2.0.0
   rxdart: ^0.27.1
