--- a/ios/Podfile
+++ b/ios/Podfile
@@ -36,6 +36,13 @@ end
 
 post_install do |installer|
   installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
     flutter_additional_ios_build_settings(target)
+    config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
+        '$(inherited)',
+        ## dart: PermissionGroup.notification
+         'PERMISSION_NOTIFICATIONS=1',
+    ]
   end
+end
 end
