update: build.gradle(minSdkVersion), androidManifest(application id)

--- a/android/app/src/debug/AndroidManifest.xml
+++ b/android/app/src/debug/AndroidManifest.xml
@@ -6,9 +6,11 @@
     <application>
         <!-- Sample AdMob App ID: ca-app-pub-3940256099942544~3347511713 -->
         <meta-data
-            android:name="com.google.android.gms.ads.ca-app-pub-3108242646730560~5473093730"
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-3108242646730560~5473093730"/>
     </application>
     
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
+
+
