--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,7 @@ flutter:
     - assets/images/
     - assets/fonts/
     - assets/json/
+    - assets/translations/
 
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -89,11 +90,6 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: RockoFLF
-      fonts:
-        - asset: assets/fonts/RockoFLF-Bold.ttf
-
 #       - asset: fonts/Schyler-Italic.ttf
 #         style: italic
 #       - asset: fonts/TrajanPro_Bold.ttf
