add: fr-FR.json, es-ES.json | update: language_preference_entity, localization_constants, localization_helper(setlocale), settings_viewmodel(localizationhelper integration), settings_option_section

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -28,6 +28,8 @@
 <array>
 	<string>en</string>
 	<string>tr</string>
+	<string>fr</string>
+	<string>es</string>
 </array>
 	<key>GADApplicationIdentifier</key>
 	<string>ca-app-pub-3108242646730560~4896371054</string>
