--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
     package="com.ibrahimkarababa.coindinolast">
+    <uses-permission android:name="android.permission.INTERNET"/>
+     <uses-permission android:name="android.permission.BLUETOOTH"/>
    <application
         tools:replace="android:label"
         android:label="coin_dino"
+        android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher">
+
+         <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3108242646730560~5473093730"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
@@ -31,6 +38,8 @@
               android:name="io.flutter.embedding.android.SplashScreenDrawable"
               android:resource="@drawable/launch_background"
               />
+
+             
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
