--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.ibrahimkarababa.coindinolast">
     <uses-permission android:name="android.permission.INTERNET"/>
      <uses-permission android:name="android.permission.BLUETOOTH"/>
+     <uses-permission android:name="com.android.vending.BILLING" />
    <application
         tools:replace="android:label"
         android:label="Coin Dino"
